fix card title overflow

--- a/sass/menu.scss
+++ b/sass/menu.scss
@@ -27,6 +27,7 @@
 	.menucard {
 		margin: 10px;
 		box-shadow:0 8px 16px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
+		background-color: grey;
 	}
 
 	.menucard:hover{
@@ -35,6 +36,7 @@
 
 	.menucardcontainer {
 		padding:0.01em 16px;
+		max-width: 210px;
 		background-color: grey;
 	}
 
